Update FAQ to specify NIP-46 support is limited to bunker:// clients

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="faq-item">
                     <h3>Which Nostr clients are supported?</h3>
-                    <p>Nostria Signer works with most modern Nostr clients that support NIP-46 remote signing protocol.
+                    <p>Nostria Signer works with most modern Nostr clients that support NIP-46 remote signing protocol (limited to bunker://).
                     </p>
                 </div>
             </div>
