--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Nostria Signer. All rights reserved.</p>
+                <p>Built with ❤️.</p>
             </div>
         </div>
     </footer>
