Add ID to hero section and refine footer message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
                 <h1>Keep Your Nostr Keys Safe</h1>
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Built with ❤️.</p>
+                <p>Built with ❤️</p>
             </div>
         </div>
     </footer>
