Add social sharing preview

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <meta property="og:title" content="Nostria Signer" />
+    <meta property="og:description" content="Keep Your Nostr Keys Safe" />
+    <meta property="og:image" content="https://nostria.app/nostria-social.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:type" content="object" />
+    <meta property="og:url" content="https://nostria.app" />
 </head>
 
 <body>
