--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <meta property="og:title" content="Nostria Signer" />
     <meta property="og:description" content="Keep Your Nostr Keys Safe" />
-    <meta property="og:image" content="https://nostria.app/nostria-social.png" />
+    <meta property="og:image" content="https://signer.nostria.app/nostria-social.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     <meta property="og:type" content="object" />
-    <meta property="og:url" content="https://nostria.app" />
+    <meta property="og:url" content="https://signer.nostria.app" />
 </head>
 
 <body>
