Add social sharing for X

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <meta property="og:image:height" content="600" />
     <meta property="og:type" content="object" />
     <meta property="og:url" content="https://signer.nostria.app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nostria Signer | Keep Your Nostr Keys Safe" />
+    <meta name="twitter:image" content="https://signer.nostria.app/nostria-social-x.png" />
 </head>
 
 <body>
